// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redirect Component should handle a forced redirect: forced route 1`] = `
<Fragment>
  Redirected towards 
  /dolor
</Fragment>
`;

exports[`Redirect Component should handle a forced redirect: forced route, replace 1`] = `
Array [
  Array [
    "/dolor?dolor=sit",
  ],
]
`;

exports[`Redirect Component should handle a redirect with a url: redirect url 1`] = `
<Fragment>
  Redirected towards 
  //lorem/ipsum?dolor=sit
</Fragment>
`;

exports[`Redirect Component should handle existing routes: existing route 1`] = `
Object {
  "activateOnError": false,
  "aliases": Array [],
  "component": "productView/productViewOpenShiftContainer",
  "default": false,
  "disabled": false,
  "id": "openshift-container",
  "isSearchable": true,
  "path": "*",
  "pathParameter": "OpenShift Container Platform",
  "productConfig": Array [
    Object {
      "graphTallyQuery": Object {
        "granularity": "daily",
      },
      "initialGraphFilters": Array [
        Object {
          "color": "#06c",
          "fill": "#8bc1f7",
          "id": "cores",
          "isOptional": true,
          "stroke": "#06c",
        },
        Object {
          "color": "#06c",
          "fill": "#8bc1f7",
          "id": "sockets",
          "isOptional": true,
          "stroke": "#06c",
        },
        Object {
          "chartType": "threshold",
          "id": "thresholdSockets",
          "isOptional": true,
        },
        Object {
          "chartType": "threshold",
          "id": "thresholdCores",
          "isOptional": true,
        },
      ],
      "initialGraphSettings": Object {},
      "initialGuestsFilters": Array [
        Object {
          "cell": [Function],
          "header": [Function],
          "id": "displayName",
        },
        Object {
          "cellWidth": 40,
          "id": "inventoryId",
        },
        Object {
          "cell": [Function],
          "cellWidth": 15,
          "id": "lastSeen",
        },
      ],
      "initialInventoryFilters": Array [
        Object {
          "cell": [Function],
          "id": "displayName",
          "isSortable": true,
        },
        Object {
          "cellWidth": 15,
          "header": [Function],
          "id": "sockets",
          "isOptional": true,
          "isSortable": true,
          "isWrappable": true,
        },
        Object {
          "cellWidth": 15,
          "header": [Function],
          "id": "cores",
          "isOptional": true,
          "isSortable": true,
          "isWrappable": true,
        },
        Object {
          "cell": [Function],
          "cellWidth": 25,
          "id": "lastSeen",
          "isSortable": true,
          "isWrappable": true,
        },
      ],
      "initialInventorySettings": Object {},
      "initialOption": "cores",
      "initialSubscriptionsInventoryFilters": Array [
        Object {
          "id": "productName",
          "isSortable": true,
        },
        Object {
          "cellWidth": 15,
          "id": "serviceLevel",
          "isSortable": true,
          "isWrappable": true,
        },
        Object {
          "cell": [Function],
          "cellWidth": 15,
          "id": "upcomingEventDate",
          "isSortable": true,
          "isWrappable": true,
        },
      ],
      "initialToolbarFilters": Array [
        Object {
          "id": "sla",
        },
      ],
      "inventoryHostsQuery": Object {
        "dir": "desc",
        "limit": 100,
        "offset": 0,
        "sort": "last_seen",
      },
      "inventorySubscriptionsQuery": Object {
        "dir": "desc",
        "limit": 100,
        "offset": 0,
        "sort": "upcoming_event_date",
      },
      "productContextFilterUom": true,
      "productGroup": "OpenShift Container Platform",
      "productId": "OpenShift Container Platform",
      "productLabel": "OpenShift",
      "query": Object {
        "beginning": "2019-06-20T00:00:00.000Z",
        "ending": "2019-07-20T23:59:59.999Z",
        "uom": "cores",
      },
      "viewId": "viewOpenShift Container Platform",
    },
    Object {
      "graphTallyQuery": Object {
        "granularity": "daily",
      },
      "initialGraphFilters": Array [
        Object {
          "color": "#06c",
          "fill": "#8bc1f7",
          "id": "coreHours",
          "stroke": "#06c",
        },
      ],
      "initialGraphSettings": Object {
        "actionDisplay": [Function],
      },
      "initialInventoryFilters": Array [
        Object {
          "cell": [Function],
          "id": "displayName",
          "isSortable": true,
        },
        Object {
          "cell": [Function],
          "cellWidth": 20,
          "id": "coreHours",
          "isSortable": true,
          "isWrappable": true,
        },
        Object {
          "cell": [Function],
          "cellWidth": 25,
          "id": "lastSeen",
          "isSortable": true,
          "isWrappable": true,
        },
      ],
      "initialToolbarFilters": undefined,
      "inventoryHostsQuery": Object {
        "dir": "desc",
        "limit": 100,
        "offset": 0,
        "sort": "last_seen",
      },
      "productGroup": "OpenShift-metrics",
      "productId": "OpenShift-metrics",
      "productLabel": "OpenShift Metric",
      "query": Object {
        "beginning": "2019-07-01T00:00:00.000Z",
        "ending": "2019-07-31T23:59:59.999Z",
      },
      "viewId": "viewOpenShift-metrics",
    },
  ],
  "productParameter": "OpenShift Container Platform",
  "redirect": null,
  "routeHref": "/openshift-container",
  "viewParameter": "viewOpenShift Container Platform",
}
`;

exports[`Redirect Component should handle missing routes: missing route, component 1`] = `
<Fragment>
  Redirected towards 
  /lorem-ipsum
</Fragment>
`;

exports[`Redirect Component should render a basic component: basic 1`] = `
<Router
  routes={
    Array [
      Object {
        "activateOnError": false,
        "aliases": Array [],
        "component": "productView/productViewOpenShiftDedicated",
        "default": false,
        "disabled": false,
        "id": "openshift-dedicated",
        "isSearchable": true,
        "path": "*",
        "pathParameter": "OpenShift-dedicated-metrics",
        "productConfig": Array [
          Object {
            "graphTallyQuery": Object {
              "granularity": "daily",
            },
            "initialGraphFilters": Array [
              Object {
                "chartType": "line",
                "color": "#06c",
                "fill": "#8bc1f7",
                "id": "coreHours",
                "isStacked": false,
                "stroke": "#06c",
                "yAxisUseDataSet": true,
              },
              Object {
                "chartType": "line",
                "color": "#009596",
                "fill": "#a2d9d9",
                "id": "instanceHours",
                "isStacked": false,
                "stroke": "#009596",
                "yAxisUseDataSet": true,
              },
            ],
            "initialGraphSettings": Object {
              "actionDisplay": [Function],
            },
            "initialInventoryFilters": Array [
              Object {
                "cell": [Function],
                "id": "displayName",
                "isSortable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "coreHours",
                "isSortable": true,
                "isWrappable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "id": "instanceHours",
                "isSortable": true,
                "isWrappable": true,
              },
              Object {
                "cell": [Function],
                "cellWidth": 15,
                "header": [Function],
                "id": "lastSeen",
                "isSortable": true,
                "isWrappable": true,
              },
            ],
            "initialToolbarFilters": undefined,
            "inventoryHostsQuery": Object {
              "dir": "desc",
              "limit": 100,
              "offset": 0,
              "sort": "last_seen",
            },
            "productGroup": "OpenShift-dedicated-metrics",
            "productId": "OpenShift-dedicated-metrics",
            "query": Object {
              "beginning": "2019-07-01T00:00:00.000Z",
              "ending": "2019-07-31T23:59:59.999Z",
            },
            "viewId": "viewOpenShift-dedicated-metrics",
          },
        ],
        "productParameter": "OpenShift-dedicated-metrics",
        "redirect": null,
        "routeHref": "/openshift-dedicated",
        "viewParameter": "viewOpenShift-dedicated-metrics",
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "rhel",
        "path": "/rhel",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "rhel-arm",
        "path": "/rhel-arm",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "rhel-ibmpower",
        "path": "/rhel-ibmpower",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "rhel-ibmz",
        "path": "/rhel-ibmz",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "rhel-x86",
        "path": "/rhel-x86",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewOpenShiftContainer",
        "disabled": false,
        "exact": true,
        "id": "openshift-container",
        "path": "/openshift-container",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewOpenShiftDedicated",
        "disabled": false,
        "exact": true,
        "id": "openshift-dedicated",
        "path": "/openshift-dedicated",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "satellite",
        "path": "/satellite",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "satellite-capsule",
        "path": "/satellite-capsule",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewDefault",
        "disabled": false,
        "exact": true,
        "id": "satellite-server",
        "path": "/satellite-server",
        "redirect": null,
      },
      Object {
        "activateOnError": true,
        "component": "optinView/optinView",
        "disabled": false,
        "exact": true,
        "id": "optin",
        "path": "/optin",
        "redirect": null,
      },
      Object {
        "activateOnError": false,
        "component": "productView/productViewMissing",
        "disabled": false,
        "exact": true,
        "id": "missing",
        "path": "/",
        "redirect": "/",
      },
    ]
  }
/>
`;
